--- a/shop/templates/shop/product_list.html
+++ b/shop/templates/shop/product_list.html
@@ -4,6 +4,7 @@
     <title>Product List</title>
 </head>
 <body>
+    <a href="{% url 'view_cart' %}">CART</a>
     <h1>Product List</h1>
     <ul>
         {% for product in products %}
